[gd_scene load_steps=3 format=3 uid="uid://yfmldiewjebk"]

[ext_resource type="Script" path="res://src/menu/MainMenu.gd" id="1_awlug"]
[ext_resource type="Theme" uid="uid://cpf3htl7plvcd" path="res://src/menu/menu_theme.tres" id="2_qf5ou"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_awlug")

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -33.0
offset_right = 51.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qf5ou")

[node name="BeginButton" type="Button" parent="ButtonsVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qf5ou")
text = "Commencer"

[node name="LevelButton" type="Button" parent="ButtonsVBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qf5ou")
text = "Niveaux
"
